--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ expo-env.d.ts
 *.key
 *.mobileprovision
 
+.env
+
 # Metro
 .metro-health-check*
 
@@ -31,7 +33,8 @@ yarn-error.*
 *.pem
 
 # local env files
-.env*.local
+.env
+*.local
 
 # typescript
 *.tsbuildinfo
