--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^7.3.11",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
+    "cloudinary": "^2.6.1",
     "expo": "53.0.9",
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
