--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/native-stack": "^7.3.12",
     "cloudinary": "^2.6.1",
     "expo": "53.0.9",
+    "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-native": "0.79.2",
+    "react-native-calendars": "^1.1312.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.17.4",
