--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas:android": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
