--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^2.6.1",
     "expo": "53.0.9",
     "expo-linear-gradient": "~14.1.4",
+    "expo-location": "~18.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,8 +32,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
-    "expo-location": "~18.1.5"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
