--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Agenda UABCS",
     "slug": "agenda-uabcs",
     "version": "1.0.0",
+    "sdkVersion": "54.0.0",
     "orientation": "portrait",
     "icon": "./assets/agendaLogo.png",
     "userInterfaceStyle": "light",
