--- a/database/API/package.json
+++ b/database/API/package.json
@@ -12,7 +12,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -22,6 +25,8 @@
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
+    "jest": "^29.0.0",
+    "supertest": "^6.3.0",
     "nodemon": "^3.1.10"
   }
 }
