--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appagenda",
+  "name": "agendauabcs",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -7,7 +7,10 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "eas:android": "eas build -p android --profile preview"
+    "eas:android": "eas build -p android --profile preview",
+    "test": "cd database/API && npm test",
+    "test:watch": "cd database/API && npm test -- --watch",
+    "test:coverage": "cd database/API && npm test -- --coverage"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -38,7 +41,9 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   },
   "private": true
 }
