--- a/database/API/package.json
+++ b/database/API/package.json
@@ -13,9 +13,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
+    "test": "node --experimental-vm-modules --no-warnings=ExperimentalWarning node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules --no-warnings=ExperimentalWarning node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules --no-warnings=ExperimentalWarning node_modules/jest/bin/jest.js --coverage"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -25,8 +25,9 @@
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "jest": "^29.0.0",
-    "supertest": "^6.3.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "supertest": "^6.3.0"
   }
 }
