--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.3",
     "jest": "^30.2.0",
+    "jest-expo": "^54.0.13",
+    "react-test-renderer": "^19.1.0",
     "supertest": "^7.1.4"
   },
   "private": true
